Added photo page HTML

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Homepage</title>
   </head>
   <body>
-    <h1>croissant</h1>
+    <h1>🥐 croissant</h1>
     <p>
       Through its many evolutions, food experts and historians agree that the
       croissant has become a uniquely French pastry. The French government even
