--- a/photo.html
+++ b/photo.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="src/style.css" />
     <title>Photo</title>
   </head>
   <body>
     <h1>🥐 A picture of a croissant</h1>
-    <img src="/src/images.jpg" alt="croissant photo" />
+    <img src="/src/images.jpg" alt="croissant photo" class="croissant-photo" />
     <footer>
       <a href="/" title="Home">Homepage</a>
       <a href="/photo.html" title="Photo">Photo</a>
