Made some changes to make the website SEO friendly

--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="A brief history of croissant and some beautiful images of it and how to buy some."
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/src/style.css" />
-    <title>Homepage</title>
+    <title>Homepage of croissant website</title>
   </head>
   <body>
     <h1>🥐 croissant</h1>
